버그 수정 및 소유권 확인 추가
